--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.0"
   }
 }
