--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "gulp": "^4.0.0"
+    "gulp": "^4.0.0",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^5.0.1"
   }
 }
