--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "gulp": "^4.0.0",
+    "autoprefixer": "^9.4.3",
+    "gulp": "3.9.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-util": "^3.0.8",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "postcss-nested": "^4.1.1",
+    "postcss-simple-vars": "^5.0.1"
   }
 }
