--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
+    "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.1",
     "postcss-simple-vars": "^5.0.1"
   }
