--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
     "postcss-import": "^12.0.1",
+    "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.1",
     "postcss-simple-vars": "^5.0.1"
   }
