--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.1",
-    "postcss-simple-vars": "^5.0.1"
+    "postcss-simple-vars": "^5.0.1",
+    "webpack-cli": "^3.1.2"
   }
 }
