--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.1",
     "postcss-simple-vars": "^5.0.1",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
 }
