--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "3.9.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-modernizr": "^3.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svg2png": "^2.0.2",
+    "gulp-usemin": "^0.3.29",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
     "postcss-hexrgba": "^1.0.1",
